GVfsJobUnmount: check that vfunc is implemented before calling it

GVfsBackend::try_unmount is optional (like all the other try_* vfuncs),
and in fact many backends don't implement it.
In case it's NULL, returing FALSE does the right thing and schedules
a thread for calling ->unmount.

https://bugzilla.gnome.org/show_bug.cgi?id=669211